# mirage

./: .gitignore
dipole/: CMakeLists.txt  mirage.cc
dipole/analyzer/: checksum.sh  mirage_plot.C
dipole/macros/: POT_1000k.mac  run1.mac  vis.mac
dipole/scripts/: agent.sh  agent_ana.sh  submit_grid.sh  submit_grid_ana.sh  submit_in_screen.sh
dipole/src/: SteppingAction.cc
horn/: CMakeLists.txt
